Second Draft - edited motivation and fixed a few types

--- a/bitcoin_py_notebook/Bitcoin_Overview.ipynb
+++ b/bitcoin_py_notebook/Bitcoin_Overview.ipynb
@@ -18,9 +18,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bitcoin has gained a lot of press coverage over the last few months. It is usually touted as either a digital currency or store of value. The question of whether or not Bitcoin is actually one of these two labels is debatable. But what is certain is that it is a decentralized payment system that does not require communication with a central authority to verify transactions but rather relies on the \"work\" of an uncorrdinated set of Bitcoin miners to verify transactions. The technology behind the Bitcoin Network is applicable to other applications than just digital currency. But we will focus on just Bitcoin since it is the first and is relatively easy to understand as it's only goal is to \"send\" Bitcoin from one place to another.\n",
+    "**Disclaimer: This article aims to explain at a conceptual level how Bitcoin works. The intention is not to pursaude anyone to invest in Bitcoin.** \n",
     "\n",
-    "As engineers, it is vital to understand emerging technologies. The IEEE Computer Society predicts that 2018 will be a big year for blockchain technologies, including but not limited to the Bitcoin network. [1] Therefore it is useful to understand on a basic level how and why the Bitcoin blockchain works. We study Bitcoin as an example to uncover the backbone of a decentralized network, but many other \"coins\" either use the same technology or borrow ideas from Bitcoin, and there are sure to be even more developments in the coming years. We will skip over minor details that are outlined in more detail in Satashi Nakamoto's whitepaper [2] and focus on how transactions are verified without a central entity such as government or corporations."
+    "Bitcoin has gained a lot of press coverage over the last few months. It is oftetimes touted as either a digital currency or store of value, but it highly debated whether it will fill that role anytime in the near future. Bitcoin can be described as a \"decentralized\" payment system that does not require communication with a central authority to verify transactions but rather relies on the \"work\" of an uncorrdinated set of Bitcoin miners to verify transactions. The technology behind the Bitcoin Network is applicable to other applications than just digital currency. \n",
+    "\n",
+    "As engineers, it is vital to understand emerging technologies. The IEEE Computer Society predicts that 2018 will be a big year for blockchain technologies. [1] Therefore it is useful to understand on a basic level how and why the Bitcoin blockchain works. We study Bitcoin as an example to uncover the backbone of a decentralized network, but many other \"coins\" either use the same technology or borrow ideas from Bitcoin, and there are sure to be further projects in the coming years. We will skip over minor details that are outlined in more detail in Satashi Nakamoto's whitepaper [2] and focus on how transactions are verified without a central entity such as government or corporations."
    ]
   },
   {
@@ -44,7 +46,7 @@
     "First, here are some useful definitions:\n",
     "- *Node* - a computer that connects to the Bitcoin network.\n",
     "- *Proof of Work* - The algorithm that miners use to verify a transaction.\n",
-    "- *SHA256* - The hashing algorithm used in Proof of Work. It maps a message of size less 2^32 bits and to a message of size 256 bits. It is extremely difficult to compute an inverse-hash, but if one knows the message he will get the same output every time. Thus, this a good way to encode information.\n",
+    "- *SHA256* - The hashing algorithm used in Proof of Work. It maps a message of size less than 2^64 bits and unique \"block\" (this is different that a bitcoin block described below) of size 256 bits. It is extremely difficult to compute an inverse-hash, but if one knows the message he will get the same output every time. Thus, this a good way to encode information.\n",
     "- *Nonce* - The \"golden ticket\" for Bitcoin miners. It is a 32-bit value that is the output of the Proof of Work algorithm. This is described in more detail under Proof of Work.\n",
     "- *Block* - A collection of transcations up to (at the time of writing) 1 MB in size. To verify a transaction on the Bitcoin network though Proof of Work, all the information needed is in the block-header. A block-header is 80bytes or 640bits.\n",
     "- *Bitcoin Core* - a piece of software that all nodes need to download in order to connect to the bitcoin network which allows users to send/recieve Bitcoin."
@@ -56,18 +58,18 @@
    "source": [
     "A blockchain is a chain of blocks dating back to the very first Bitcoin block. In order to use the Bitcoin network, one must download bitcoin core which includes a copy of the entire blockchain (though in practice most users store the majority of the data remotely). The blockchain is also known as a public ledger since it provides proof of reciept and the timestamp for every transaction ever made in Bitcoin. \n",
     "\n",
-    "Miners compete to process transactions. For our purposes, the first to find a nonce that satisfies the target appends that block to the blockchain. In other words, miners compete to establish consensus over which transaction is allowed to go through and which is left in the queue. On average 1 block is mined every 10 minutes. The bitcoin protocol adjusts the difficulty target to keep it that way. Miners compete to mine that block, and if they are successful they are rewarded. At the time of writing the processing power needed to mine a block in time averages `(1,590,896,927,258 2^32 Hashes to mine a block)/(8,481,426,187 Giga Hash/second) = 805seconds` [3]. In December, it took even longer since it took 11,388,083,790 Giga Hashes/second to mine 1 block [4]. Obviously, this is a huge amount of computing power and the chance of one computer successfully finding a nonce in a resonable amount of time even with the best hardware available is almost 0. Because of the difficulty of Proof of Work, nowadays computers usually work in \"pools\" where they share computing power and also share the rewards. \n",
+    "Miners compete to process transactions. For our purposes, the first to find a nonce that satisfies the target appends that block to the blockchain. In other words, miners compete to establish consensus over which transaction is allowed to go through and which is left in the queue. On average 1 block is mined every 10 minutes. The bitcoin protocol adjusts the difficulty target to keep it that way. Miners compete to mine that block, and if they are successful they are rewarded. \n",
+    "\n",
+    "At the time of writing the processing power needed to mine a block in time averages `(1,590,896,927,258 2^32 Hashes to mine a block)/(8,481,426,187 Giga Hash/second) = 805seconds` [3]. In December, it took even longer since it took 11,388,083,790 Giga Hashes/second to mine 1 block [4]. Obviously, this is a huge amount of computing power and the chance of one computer successfully finding a nonce in a resonable amount of time even with the best hardware available is almost 0. Because of the difficulty of Proof of Work, nowadays computers usually work in \"pools\" where they share computing power and also share the rewards. \n",
     "\n",
     "Proof of Work expends resources (power), which is why miners need to be compensated for their work in order to sustain the network. It is unfeasable for bad actors to try to tamper with the blockchain by spamming the network because they expend resources and get no return, while miners are compensated for their work and presumably use some of that compensation build better machines. \n",
     "\n",
     "The incentive to mine is that miners are rewarded a certain number of newly minted coins for processing the first\n",
-    "transaction of a block. The bitcoin reward starts at 25 bitcoins. Every 200,000 blocks that number is halved. They are also compensated through transaction fees provided by nodes as they send their Bitcoin.\n",
-    "The \"highest-bidders\", or nodes with the highest transaction fees, are the first to be included in the next block. \n",
+    "transaction of a block. The bitcoin reward starts at 25 bitcoins. Every 200,000 blocks that number is halved. Miners are also compensated through transaction fees provided by nodes as they send their Bitcoin across the network. The \"highest-bidders\", or nodes with the highest transaction fees, are the first to be included in the next block. \n",
     "\n",
+    "For example, by going to a blockchain explorer like https://blockchain.info/ we see that there are (at the time of writing) 504,717 blocks that have been mined. That means that the current reward is `25/Floor[504,717/200,000] = 12.5 BTC`. \n",
     "\n",
-    "For example, by going to a blockchain explorer like we see that there are 504,126 blocks that have been mined. That means that the current reward is `25/Floor[504,126/200,000] = 12.5 BTC`. \n",
-    "\n",
-    "The blockchain is just a chain of blocks that each node downloads. Miners append the block they mine to the blockchain after they a find the nonce, hence the blockchain is updated every 10 minutes. Every block contains in its header [x number] of transactions over the network. At the time of writing there are [x number] of blocks in the blockchain. Therefore it is practically impossible to \"double-spend\", or fake that a transaction was never sent, because one would have to remine the entire blockchain. Unless you wanted to burn [x amount] trying. Therefore miners make the network more secure with every block mined due to the design of the blockchain."
+    "After completing the Proof of Work algorithm, signaled by finding the correct nonce, and in effect \"mining\" a Bitcoin, miners append the block they mine to the blockchain. "
    ]
   },
   {
@@ -88,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SHA-256 can be thought of as an algorithm with 4 steps. It takes as input a message. The message can be anything you like. But the message is represented in bits. For example, strings are sometimes used as a message but they are first decoded into bits. For future reference when we say SHA256(message) in psuedocode, message can be from 1 bit to 2^64 -1 bits. And we mean sequentially process the message in 512-bit \"blocks\", then output a 256-bit hash value.\n",
+    "SHA-256 can be thought of as an algorithm with 4 steps. It takes as input a message. The message can be anything you like. But the message is represented in bits. For example, strings are sometimes used as a message but they are first decoded into bits. For future reference when we say SHA256(message) in psuedocode, message can be from 1 bit to 2^64 -1 bits. \n",
     "\n",
     "- Step 1: Pre-process the message by padding properly and appending length as a 64-bit unsigned. For example if the message is 900 bits, it should look like this:\n",
     "<img src=\"sha256-7.png\" width=\"60%\" height=\"60%\">\n",
@@ -176,12 +178,10 @@
    "source": [
     "#Based off of code described here http://www.righto.com/2014/02/bitcoin-mining-hard-way-algorithms.html#ref3\n",
     "def PoW(block_header,target):\n",
-    "    nonce = 850000000 # I cheated. Normally nonce starts at 0 but I set it close to the nonce since \n",
-    "                      # I knew the answer ahead of time \n",
+    "    nonce = 850000000 # I cheated. Normally nonce starts at 0 but I set it close to the nonce.\n",
     "    #Run Proof of Work\n",
     "    while nonce < 0x100000000: #while nonce < 2^32\n",
-    "        block_header = (header + struct.pack(\"<LLL\", time_, bits, nonce)) #append nonce. struct.pack(..) \n",
-    "                                                                          #just \n",
+    "        block_header = (header + struct.pack(\"<LLL\", time_, bits, nonce)) #append nonce.\n",
     "        \n",
     "        hash = hashlib.sha256(hashlib.sha256(block_header).digest()).digest() \n",
     "        if hash[::-1] < target:\n",
@@ -218,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As one can see, most of the complexity of the algorithm comes from the sha256 function. We can also see that a for loop is incredibly ineffecient seeing that even when we started at nonce = 8 million, that it took an extremely long time. In the project, the difficulty may need to be adjusted to keep it so that even the less optimized designs are able to complete the mining process in a reasonable amount of time. "
+    "As one can see, most of the complexity of the algorithm comes from the sha256 function. We can also see that a for loop is incredibly inefficient seeing that even when we started at nonce = 8 million, that it took a good amount of time to  long time. In the project, the difficulty will be adjusted to keep it so that even the less optimized designs are able to complete the mining process in a reasonable amount of time. Hopefully you guys will design a FPGA can do this much faster."
    ]
   },
   {
@@ -248,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For best results, I suggest pipelining both the inner and outer sha256 algorithms. Good luck on the project. "
+    "For best results, I suggest pipelining both the inner and outer sha256 algorithms. Good luck on the project."
    ]
   },
   {
@@ -267,14 +267,7 @@
     "\n",
     "[6],[7] : Professor Lin's slides, to be uploaded. This will be updated when they are posted on the website.\n",
     "\n",
-    "[8],[9] : http://digitalcommons.calpoly.edu/cgi/viewcontent.cgi?article=1285&context=eesp"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note to professor: I didn't include the fact that there is oftentimes a nonce that doesn't work. Because I figure that you will probably just provide block_headers and difficulty targets that don't require this."
+    "[8] : http://digitalcommons.calpoly.edu/cgi/viewcontent.cgi?article=1285&context=eesp"
    ]
   }
  ],
