--- a/bitcoin_py_notebook/ECE111_Bitcoin.ipynb
+++ b/bitcoin_py_notebook/ECE111_Bitcoin.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Disclaimer: This article aims to explain at a conceptual level how Bitcoin works. The intention is not to pursaude anyone to invest in Bitcoin.** \n",
+    "**Disclaimer: This article aims to explain at a conceptual level how Bitcoin works. The intention is not to pursuade anyone to invest in Bitcoin.** \n",
     "\n",
     "Bitcoin has gained a lot of press coverage over the last few months. It is oftetimes touted as either a digital currency or store of value, but it highly debated whether it will fill that role anytime in the near future. Bitcoin can be described as a \"decentralized\" payment system that does not require communication with a central authority to verify transactions but rather relies on the \"work\" of an uncorrdinated set of Bitcoin miners to verify transactions. The technology behind the Bitcoin Network is applicable to other applications than just digital currency. \n",
     "\n",
