--- a/bitcoin_py_notebook/ECE111_Bitcoin.ipynb
+++ b/bitcoin_py_notebook/ECE111_Bitcoin.ipynb
@@ -225,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### A more in depth look at ```SHA256(SHA256(block_header)) < target```"
+    "### A closer look at ```SHA256(SHA256(block_header)) < target```"
    ]
   },
   {
