--- a/bitcoin_py_notebook/ECE111_Bitcoin.ipynb
+++ b/bitcoin_py_notebook/ECE111_Bitcoin.ipynb
@@ -216,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As one can see, most of the complexity of the algorithm comes from the sha256 function. We can also see that a for loop is incredibly inefficient seeing that even when we started at nonce = 8 million, that it took a good amount of time to  long time. In the project, the difficulty will be adjusted to keep it so that even the less optimized designs are able to complete the mining process in a reasonable amount of time. Hopefully you guys will design a FPGA can do this much faster."
+    "As one can see, most of the complexity of the algorithm comes from the sha256 function. We can also see that a for loop is incredibly inefficient seeing that even when we started at nonce = 8 million, that it took a good amount of time to  long time. In the project, the difficulty will be adjusted to keep it so that even the less optimized designs are able to complete the mining process in a reasonable amount of time. An FPGA, which we simulate in this class, can do this much faster."
    ]
   },
   {
